add optional parameter socket_run_dir to add the run directory in the systemd file, see https://github.com/go-gitea/gitea/pull/8377/files

--- a/templates/systemd.erb
+++ b/templates/systemd.erb
@@ -5,6 +5,9 @@ After=syslog.target network.target
 [Service]
 Type=simple
 WorkingDirectory=<%= @installation_directory %>
+# If using unix socket: Tells Systemd to create /run/gitea folder to home gitea.sock
+# Manual cration would vanish after reboot.
+<%- if @socket_run_dir %>RuntimeDirectory=<%= @socket_run_dir -%><% end %>
 User=<%= @owner %>
 ExecStart=<%= @installation_directory %>/gitea web
 PIDFile=/var/spool/gitea/pid/master.pid
